# NeuromorphicNet

./: CMakeLists.txt  LICENSE  README.md
NeuromorphicNet/: CMakeLists.txt
NeuromorphicNet/include/: IFNeuron.h  NeuralNetGenerator.h  SpikeGenerator.h  json.hpp
NeuromorphicNet/src/: main.cpp
